--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
+.container{
+  max-width: 1080px;
+  margin: 0 auto;
+}
+.container > h1{
   text-align: center;
+  background-color: white;
+  padding: 1em ;
+  border-radius: 1rem;
 }
+.houses{
+    background-color: white;
+    padding: 2rem;
+    border-radius: 1rem;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
+.house-name{
+  background-color: rgb(231, 231, 231);
+  padding: 2rem;
+  border-radius: 1rem;
+  /* box-shadow: -3px 15px 32px 0px rgba(0,0,0,0.42); */
+  box-shadow: 5px 5px 0px 0px #949494,
+              10px 10px 0px 0px #5f5f5f,
+              -3px 4px 0px -9px rgba(0,0,0,0);
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.houses > .house-name + .house-name{
+  margin-top: 1rem;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.region-ruled{
+  padding: 1em;
+  background-color: white;
+  border-radius: 1em;
 }
